--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,165 @@
- .headx {
-      width: 100%;
-      height: 50px;
-      background-color:#1778f2 ;
-      margin-bottom: 40px;
-  }
-  .headx p {
-      color :white;
-      padding: 12px 10px 0 30px;
-      font-weight: 500;
-  }
-  .jumbx {
-    background: #222222;
-    border-radius: 0.5%;
-    margin-top: 2.5%;
-    width: 100%;
-    height: 90vh;
-  }
-  .d a{
-    text-decoration: none;
-  }
+.headx {
+  width: 100%;
+  height: 50px;
+  background-color: #1778f2;
+  margin-bottom: 40px;
+}
+.headx p {
+  color: white;
+  padding: 12px 10px 0 30px;
+  font-weight: 500;
+}
+.jumbx {
+  background: #222222;
+  border-radius: 0.5%;
+  margin-top: 2.5%;
+  width: 100%;
+  height: 90vh;
+}
+.d a {
+  text-decoration: none;
+}
+.input-group {
+  width: 50%;
+}
+.hidden {
+  display: none;
+}
+.navi {
+  margin-left: 30%;
+}
+.navi ul li {
+  list-style-type: none;
+  display: inline-flex;
+}
+.navi ul li a {
+  text-decoration: none;
+}
+img,
+canvas {
+  width: 235px;
+  height: 235px;
+  border-radius: 50%;
+}
+::-webkit-input-placeholder {
+  text-align: center;
+}
+
+:-moz-placeholder {
+  /* Firefox 18- */
+  text-align: center;
+}
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+  text-align: center;
+}
+
+:-ms-input-placeholder {
+  text-align: center;
+}
+input {
+  text-align: center;
+}
+#time {
+  margin-right: 40px;
+}
+#before,
+#after {
+  margin-bottom: 20px;
+}
+.shadowx {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+}
+@media (max-width: 500px) {
   img,
   canvas {
-    width: 235px;
-    height: 235px;
-    border-radius: 50%;
-  }
-  ::-webkit-input-placeholder {
-    text-align: center;
-  }
-
-  :-moz-placeholder {
-    /* Firefox 18- */
-    text-align: center;
-  }
-
-  ::-moz-placeholder {
-    /* Firefox 19+ */
-    text-align: center;
-  }
-
-  :-ms-input-placeholder {
-    text-align: center;
-  }
-  input {
-    text-align: center;
-  }
-  #time {
-      margin-right: 40px;
-  }
-  #before, #after{
-      margin-bottom: 20px;
-  }
-  .shadowx {
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  }
-  @media (max-width: 500px) { 
-    img,
-    canvas {
     width: 120px;
     height: 120px;
     border-radius: 50%;
-   }
-   #before, #after{
-      margin-bottom: 20px;
-      font-size: 14.5px;
+  }
+  #before,
+  #after {
+    margin-bottom: 20px;
+    font-size: 14.5px;
   }
   #time {
-      margin-right: 40px;
-      text-align: center;
+    margin-right: 40px;
+    text-align: center;
   }
   .headx p {
-      color :white;
-      padding: 12px 10px 0 0;
-      font-weight: 500;
-      text-align: center;
+    color: white;
+    padding: 12px 10px 0 0;
+    font-weight: 500;
+    text-align: center;
   }
-  .jumbx{
+  .jumbx {
     margin-top: 4.5%;
   }
-  .headx{
-      margin-bottom: 80px;
+  .headx {
+    margin-bottom: 80px;
   }
-  #vradius, #reset{
-      margin-top: 10px;
+  #vradius,
+  #reset {
+    margin-top: 10px;
   }
-  label{
-      margin-bottom: -240px;
-      margin-top: 60px;
+  label {
+    margin-bottom: -240px;
+    margin-top: 60px;
   }
+}
+@media (max-width: 395px) {
+  .jumbx {
+    width: 100%;
+    height: 77vh;
   }
-  @media (max-width: 360px){
-    .jumbx{
-        width: 80%;
-        height: 80%;
-    }
+  img,
+  canvas {
+    width: 135px;
+    height: 135px;
+    margin-bottom: -30px;
+    border-radius: 50%;
   }
+  #before,
+  #after {
+    margin-top: -50px;
+    font-size: 14.5px;
+  }
+  .headx p {
+    color: white;
+    padding: 7px;
+    font-weight: 500;
+    text-align: center;
+  }
+  .headx {
+    height: 65px;
+  }
+  #time {
+    text-align: center;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    font-size: 14.5px;
+  }
+  .input-group {
+    width: 60%;
+  }
+  section {
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 65%;
+  }
+  .xz {
+    width: 70%;
+    margin-bottom: -80px;
+  }
+  .navi {
+    margin-left: 14.5%;
+  }
+  .navi ul li {
+    display: block;
+  }
+  .navi ul li span {
+    display: none;
+  }
+}
